// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyInput componentWillReceiveProps -> props.value 1`] = `
<div
  className="input-group input-group--m"
  style={undefined}
>
  <input
    className="input input-group__field"
    defaultValue=""
    disabled={undefined}
    name="currency"
    onBlur={[Function]}
    onChange={[Function]}
    onInput={[Function]}
    onKeyDown={[Function]}
    type="text"
    value="1234.00"
  />
  <span
    className="input-group__item"
  >
    USD
  </span>
</div>
`;

exports[`CurrencyInput should render right thing and don't change unexpected 1`] = `
<div
  className="input-group input-group--m"
  style={undefined}
>
  <input
    className="input input-group__field"
    defaultValue=""
    disabled={undefined}
    name="currency"
    onBlur={[Function]}
    onChange={[Function]}
    onInput={[Function]}
    onKeyDown={[Function]}
    type="text"
    value="1234.00"
  />
  <span
    className="input-group__item"
  >
    USD
  </span>
</div>
`;

exports[`CurrencyInput should render right thing and don't change unexpected for JPY 1`] = `
<div
  className="input-group input-group--m"
  style={undefined}
>
  <input
    className="input input-group__field"
    defaultValue=""
    disabled={undefined}
    name="currency"
    onBlur={[Function]}
    onChange={[Function]}
    onInput={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
  <span
    className="input-group__item"
  >
    JPY
  </span>
</div>
`;
